# synacore_challenge_rust

./: Cargo.toml  LICENSE  README.md  dump1.asm
src/: main.rs
src/console/: mod.rs
src/util/: event.rs  mod.rs
src/vm/: mod.rs
