[package]
name = "synacor"
version = "0.1.0"
authors = ["Tyler Park <tyler.park@fortemtech.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "~0.4"
log4rs = "0.13.0"
env_logger = "~0.8"
rustop = "~1.1.1"
regex = "~1.4"
tui = "0.14"
termion = "1.5"
crossbeam = "0.3.2"
ctrlc = { version = "3.1.9", features = ["termination"] }

[dev-dependencies]
rand = "0.7"

[[bin]]
name = "main"
path = "src/main.rs"